2006-10-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* Drop user mode support.
	  You should use site bundle support instead of it.

	* Site bundle supported.
	  Site bundle is a directory structure including working directory,
	  application directory, plugin directory, and sockbase and etc and
	  tmp directory. Now a kahua-spvr process run on a site bundle.

	  Site Bundle default directory structure:
	    <site-bundle-root>/
	    <site-bundle-root>/app/
	    <site-bundle-root>/app-servers
	    <site-bundle-root>/database/
	    <site-bundle-root>/etc/
	    <site-bundle-root>/etc/kahua.conf
	    <site-bundle-root>/etc/user.conf
	    <site-bundle-root>/logs/
	    <site-bundle-root>/plugins/
	    <site-bundle-root>/socket/
	    <site-bundle-root>/static/
	    <site-bundle-root>/tmp/

	  All command scripts recognize -S <path-to-site> command line option,
	  and if -S option not specified and environment variable
	  "KAHUA_DEFAULT_SITE" exists, the command use value of "KAHUA_DEFAULT_SITE"
	  as site bundle path.

2006-09-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.7 released.

	* doc/Scripts/*: Update
	  Fit them to recently changes.

2006-09-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* configure.ac,src/Makefile.in,cgi/Makefile.in,plugins/Makefile.in:
	  Now configure script takes --with-kahua-user/--with-kahua-group/
	  --with-cgi-user option, and set up owner/group/permission of
	  directories and files properly.

2006-09-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/persistence/fs.scm: Fix
	  Fix a bug that overwrite a existing instance silently
	  with new object if its key is already used by a existing instance.

2006-09-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/user.scm, src/kahua/server.scm: **SECURITY FIX**
	  Now kahua-current-user store cons of login-name and dbpath
	  to keyserver.  So user realm are separated per each database.

	  Now for non-privilege login (like kahua-web with non-member-edit
	  option), you must do